--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "sync-marks-web",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.3",
-    "@astrojs/check": "^0.6.0",
-    "typescript": "^5.4.5"
+    "@astrojs/check": "^0.9.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.13.3",
+    "flowbite": "^2.5.1",
+    "tailwindcss": "^3.4.9",
+    "typescript": "^5.5.4"
   }
 }
