--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.1",
     "astro": "^4.15.5",
     "flowbite": "^2.5.1",
     "tailwindcss": "^3.4.12",
